name:                bandits
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/beala/bandits#readme
license:             MIT
license-file:        LICENSE
author:              Alex Beal
maintainer:          alexlbeal@gmail.com
copyright:           2017 Alex Beal
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Lib, Types
  build-depends:       base >= 4.7 && < 5
                     , microlens
                     , microlens-th
                     , statistics
  default-language:    Haskell2010

executable bandits-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bandits
                     , statistics
                     , mtl
                     , mwc-random
                     , primitive
                     , microlens
                     , microlens-th
  default-language:    Haskell2010

test-suite bandits-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , bandits
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/beala/bandits
